--- a/Internas/Empresas/postulación.html
+++ b/Internas/Empresas/postulación.html
@@ -99,7 +99,7 @@ include '../../includes/estructuras/links.html';
                                             <div class="col-sm-3">
                                             <label>NOMBRE DE LA TITULACIÓN/CARRERA:</label>
                                         <input type="text" class="form-control"
-                                            placeholder="Sistemas Informáticos y Computación" readonly>
+                                            placeholder="Sistemas Informáticos y Computación" name= "carrera" readonly>
                                         <label>REGISTRO Y CONTROL DE ASISTENCIA DE:</label>
                                     
                                         <label>PRÁCTICAS PREPROFESIONALES</label>
@@ -124,7 +124,7 @@ include '../../includes/estructuras/links.html';
                                             <div class="col-sm-6">
                                                 <label>Ingrese Las Actividades Realizadas</label>
                                                 <input type="text" class="form-control" placeholder="Enter ..."
-                                                    name="campo[]">
+                                                    name="actiidad">
                                                 <input type="button" id="add_field" value="Agregar">
                                             </div>
                                             <div class="col-sm-6">
